package app

// –ü–∞–∫–µ—Ç app –æ—Ç–≤–µ—á–∞–µ—Ç –∑–∞ —Ä–µ–∞–ª–∏–∑–∞—Ü–∏—é –±–∏–∑–Ω–µ—Å-–ª–æ–≥–∏–∫–∏ –∫–æ–Ω–∫—Ä–µ—Ç–Ω–æ–≥–æ —Å–µ—Ä–≤–∏—Å–∞.
// –ó–¥–µ—Å—å –Ω–∞—Ö–æ–¥—è—Ç—Å—è –æ–±—Ä–∞–±–æ—Ç—á–∏–∫–∏ —Å–æ–±—ã—Ç–∏–π, –≤–∑–∞–∏–º–æ–¥–µ–π—Å—Ç–≤–∏–µ —Å –±–∞–∑–∞–º–∏ –¥–∞–Ω–Ω—ã—Ö –∏ –≤–Ω–µ—à–Ω–∏–º–∏ —Å–µ—Ä–≤–∏—Å–∞–º–∏.

import (
	"context"
	"log"
	"time"

	"github.com/Konscig/foodelivery-pet/internal/bootstrap"
	eventspb "github.com/Konscig/foodelivery-pet/internal/pb/eventspb"
	"github.com/google/uuid"
	"google.golang.org/protobuf/proto"
)

type Consumer struct {
	kafkaConsumer *bootstrap.Consumer
	redis         *bootstrap.RedisClient
	publisher     *Publisher
}

func NewConsumer(
	kafkaConsumer *bootstrap.Consumer,
	redis *bootstrap.RedisClient,
	publisher *Publisher,
) *Consumer {
	return &Consumer{
		kafkaConsumer: kafkaConsumer,
		redis:         redis,
		publisher:     publisher,
	}
}

func (c *Consumer) Start(ctx context.Context) {
	for {
		msg, err := c.kafkaConsumer.ReadMessage(ctx)
		if err != nil {
			log.Println("kafka read error:", err)
			continue
		}

		var event eventspb.OrderEvent
		if err := proto.Unmarshal(msg.Value, &event); err != nil {
			log.Println("event unmarshal error:", err)
			continue
		}

		if event.Status != eventspb.OrderStatus_READY {
			continue
		}

		var payload eventspb.OrderReadyPayload
		if err := proto.Unmarshal(event.Payload, &payload); err != nil {
			log.Println("payload unmarshal error:", err)
			continue
		}

		courierID := uuid.NewString()
		log.Printf("üö¥ courier %s assigned to order %s\n", courierID, event.OrderId)

		_ = c.redis.SetOrderStatus("order:"+event.OrderId+":status", "COMING")

		if err := c.publisher.PublishOrderComing(event.OrderId, courierID); err != nil {
			log.Println("publish coming error:", err)
			continue
		}

		time.Sleep(3 * time.Second)

		_ = c.redis.SetOrderStatus("order:"+event.OrderId+":status", "DONE")

		if err := c.publisher.PublishOrderDone(event.OrderId, courierID); err != nil {
			log.Println("publish done error:", err)
			continue
		}

		log.Printf("‚úÖ order %s delivered by courier %s\n", event.OrderId, courierID)
	}
}
