package app

import (
	"context"
	"log"
	"time"

	"github.com/Konscig/foodelivery-pet/api/kafka"
	eventspb "github.com/Konscig/foodelivery-pet/generated/eventspb"
	"github.com/Konscig/foodelivery-pet/services/delivery/models"
	redisClient "github.com/Konscig/foodelivery-pet/services/delivery/redis"
	"github.com/google/uuid"
	"google.golang.org/protobuf/proto"
	"gorm.io/gorm"
)

type Consumer struct {
	kafkaConsumer *kafka.Consumer
	db            *gorm.DB
	redis         *redisClient.Client
	publisher     *Publisher
}

func NewConsumer(
	kafkaConsumer *kafka.Consumer,
	db *gorm.DB,
	redis *redisClient.Client,
	publisher *Publisher,
) *Consumer {
	return &Consumer{
		kafkaConsumer: kafkaConsumer,
		db:            db,
		redis:         redis,
		publisher:     publisher,
	}
}

func (c *Consumer) Start(ctx context.Context) {
	for {
		msg, err := c.kafkaConsumer.Reader.ReadMessage(ctx)
		if err != nil {
			log.Println("kafka read error:", err)
			continue
		}

		var event eventspb.OrderEvent
		if err := proto.Unmarshal(msg.Value, &event); err != nil {
			log.Println("event unmarshal error:", err)
			continue
		}

		// –ù–∞—Å –∏–Ω—Ç–µ—Ä–µ—Å—É–µ—Ç —Ç–æ–ª—å–∫–æ READY
		if event.Status != eventspb.OrderStatus_READY {
			continue
		}

		var payload eventspb.OrderReadyPayload
		if err := proto.Unmarshal(event.Payload, &payload); err != nil {
			log.Println("payload unmarshal error:", err)
			continue
		}

		// 1Ô∏è‚É£ –ù–∞–∑–Ω–∞—á–∞–µ–º –∫—É—Ä—å–µ—Ä–∞
		courierID := uuid.NewString()

		log.Printf("üö¥ courier %s assigned to order %s\n", courierID, event.OrderId)

		// 2Ô∏è‚É£ –°–æ—Ö—Ä–∞–Ω—è–µ–º –¥–æ—Å—Ç–∞–≤–∫—É –≤ –ë–î
		delivery := models.Delivery{
			ID:        uuid.NewString(),
			OrderID:   event.OrderId,
			CourierID: courierID,
			Status:    "COMING",
		}

		if err := c.db.Create(&delivery).Error; err != nil {
			log.Println("db error:", err)
			continue
		}

		// 3Ô∏è‚É£ –ü–∏—à–µ–º —Å—Ç–∞—Ç—É—Å –≤ Redis
		_ = c.redis.SetOrderStatus(event.OrderId, "COMING")

		// 4Ô∏è‚É£ –ü—É–±–ª–∏–∫—É–µ–º order.coming
		if err := c.publisher.PublishOrderComing(event.OrderId, courierID); err != nil {
			log.Println("publish coming error:", err)
			continue
		}

		// 5Ô∏è‚É£ –ò–º–∏—Ç–∏—Ä—É–µ–º –¥–æ—Å—Ç–∞–≤–∫—É
		time.Sleep(3 * time.Second)

		// 6Ô∏è‚É£ –û–±–Ω–æ–≤–ª—è–µ–º —Å—Ç–∞—Ç—É—Å
		delivery.Status = "DONE"
		c.db.Save(&delivery)
		_ = c.redis.SetOrderStatus(event.OrderId, "DONE")

		// 7Ô∏è‚É£ –ü—É–±–ª–∏–∫—É–µ–º order.done
		if err := c.publisher.PublishOrderDone(event.OrderId, courierID); err != nil {
			log.Println("publish done error:", err)
			continue
		}

		log.Printf("‚úÖ order %s delivered by courier %s\n", event.OrderId, courierID)
	}
}
